--- a/RPDinerApp/RPDinerApp.csproj
+++ b/RPDinerApp/RPDinerApp.csproj
@@ -8,6 +8,9 @@
     <Reference Include="DataLibrary">
       <HintPath>DataLibrary.dll</HintPath>
     </Reference>
+    <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
